--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product }}</h1>
-      <p>{{ description }}</p>
+      <div class="nav-bar"></div>
+      
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <!-- image goes here -->
+            <img v-bind:src="image">
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Import App -->
@@ -19,7 +30,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount(`#app`) //refer to id=app
+      const mountedApp = app.mount('#app')
     </script>
   </body>
 </html>
