add v-if on sale

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <p>{{ description }}</p>
+            <p v-if="OnSale">On Sale!!</p>
           </div>
         </div>
       </div>
