--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      
+      <div class="cart">Cart({{ cart }})</div>
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
@@ -21,10 +21,12 @@
           <div class="product-info">
             <h1>{{ product }}</h1>
             <p>{{ description }}</p>
-            <p v-if="OnSale">On Sale!!</p>
-            <div v-for="v in variants" :key="v.id">
+            <p v-if="onSale">On Sale!!</p>
+            <div v-for="v in variants" :key="v.id" @mouseover="changeImage(v.image)">
               {{ v.color}}
             </div>
+            <button class="button" @click="addToCart">Add to Cart</button>
+            <button class="button" @click="removeFromCart">Remove from Cart</button>
           </div>
         </div>
       </div>
