--- a/index.html
+++ b/index.html
@@ -12,35 +12,16 @@
     <div id="app">
       <div class="nav-bar"></div>
       <div class="cart">Cart({{ cart }})</div>
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <!-- image goes here -->
-            <img :class="{ 'out-of-stock-img': !inStock }" v-bind:src="image">
-          </div>
-          <div class="product-info">
-            <h1>{{ title }}</h1>
-            <p>{{ description }}</p>
-            <p v-if="onSale">On Sale!!</p>
-            
-            <div v-for="(v,index) in variants" :key="v.id" 
-              @mouseover="updateVariant(index)" 
-              class="color-circle" 
-              :style="{ backgroundColor: v.color }">
-            </div>
-
-            <button class="button" @click="addToCart" 
-              :class="{ disabledButton: !inStock }" 
-              :disabled="!inStock" >
-              Add to Cart</button>
-            <button class="button" @click="removeFromCart">Remove from Cart</button>
-          </div>
-        </div>
-      </div>
+      <product-display :premium="premium"></product-display>
+      <product-display></product-display>
+      <product-display></product-display>
     </div>
 
     <!-- Import App -->
     <script src="./main.js"></script>
+
+    <!-- Import Components -->
+    <script src="./components/ProductsDisplay.js"></script>
 
     <!-- Mount App -->
     <script>
